--- a/mj/C1P1_transformer_from_scratch__S2_clean_transformer.ipynb
+++ b/mj/C1P1_transformer_from_scratch__S2_clean_transformer.ipynb
@@ -17,9 +17,7 @@
      "output_type": "stream",
      "text": [
       "c:\\Users\\matth\\Workspace\\arena3\\.venv\\Lib\\site-packages\\transformers\\tokenization_utils_base.py:1602: FutureWarning: `clean_up_tokenization_spaces` was not set. It will be set to `True` by default. This behavior will be deprecated in transformers v4.45, and will be then set to `False` by default. For more details check this issue: https://github.com/huggingface/transformers/issues/31884\n",
-      "  warnings.warn(\n",
-      "c:\\Users\\matth\\Workspace\\arena3\\.venv\\Lib\\site-packages\\torch\\nn\\modules\\module.py:1160: UserWarning: expandable_segments not supported on this platform (Triggered internally at C:\\actions-runner\\_work\\pytorch\\pytorch\\builder\\windows\\pytorch\\c10/cuda/CUDAAllocatorConfig.h:28.)\n",
-      "  return t.to(\n"
+      "  warnings.warn(\n"
      ]
     },
     {
@@ -28,12 +26,19 @@
      "text": [
       "Loaded pretrained model gpt2-small into HookedTransformer\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\matth\\Workspace\\arena3\\.venv\\Lib\\site-packages\\torch\\nn\\modules\\module.py:1160: UserWarning: expandable_segments not supported on this platform (Triggered internally at C:\\actions-runner\\_work\\pytorch\\pytorch\\builder\\windows\\pytorch\\c10/cuda/CUDAAllocatorConfig.h:28.)\n",
+      "  return t.to(\n"
+     ]
     }
    ],
    "source": [
     "from dataclasses import dataclass\n",
     "import math\n",
-    "import os\n",
     "from pprint import pprint\n",
     "\n",
     "import einops\n",
@@ -47,7 +52,7 @@
     "\n",
     "import C1P1_tests as tests\n",
     "\n",
-    "os.environ[\"CUDA_LAUNCH_BLOCKING\"] = \"1\"\n",
+    "# os.environ[\"CUDA_LAUNCH_BLOCKING\"] = \"1\"\n",
     "\n",
     "device = t.device(\n",
     "    \"mps\"\n",
@@ -56,8 +61,6 @@
     "    if t.cuda.is_available()\n",
     "    else \"cpu\"\n",
     ")\n",
-    "\n",
-    "MAIN = __name__ == \"__main__\"\n",
     "\n",
     "reference_gpt2 = HookedTransformer.from_pretrained(\n",
     "    \"gpt2-small\",\n",
@@ -70,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -424,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -470,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -517,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -748,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -834,7 +837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -882,7 +885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -962,7 +965,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1001,10 +1004,9 @@
     "        mean = residual.mean(dim=-1, keepdim=True)\n",
     "        var = residual.var(dim=-1, keepdim=True, unbiased=False)\n",
     "\n",
-    "        res = (residual - mean) / t.sqrt(var + self.cfg.layer_norm_eps)\n",
-    "        res_scaled = res * self.w + self.b\n",
+    "        res = (residual - mean) / (var + self.cfg.layer_norm_eps).sqrt()\n",
     "\n",
-    "        return res_scaled\n",
+    "        return res * self.w + self.b\n",
     "\n",
     "\n",
     "rand_float_test(LayerNorm, [2, 4, 768])\n",
@@ -1029,7 +1031,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1082,7 +1084,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1150,7 +1152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1280,7 +1282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1340,21 +1342,29 @@
     "    ) -> Float[Tensor, \"batch posn d_model\"]:\n",
     "        batch, seq_len, d_model = normalized_resid_pre.shape\n",
     "\n",
+    "        Q = (\n",
+    "            einops.einsum(\n",
+    "                normalized_resid_pre,\n",
+    "                self.W_Q,\n",
+    "                \"batch posn d_model, n_heads d_model d_head -> batch posn n_heads d_head\",\n",
+    "            )\n",
+    "            + self.b_Q\n",
+    "        )\n",
     "        K = (\n",
     "            einops.einsum(\n",
-    "                self.W_K,\n",
     "                normalized_resid_pre,\n",
-    "                \"n_heads d_model d_head, batch posn d_model -> batch posn n_heads d_head\",\n",
+    "                self.W_K,\n",
+    "                \"batch posn d_model, n_heads d_model d_head -> batch posn n_heads d_head\",\n",
     "            )\n",
     "            + self.b_K\n",
     "        )\n",
-    "        Q = (\n",
+    "        V = (\n",
     "            einops.einsum(\n",
-    "                self.W_Q,\n",
     "                normalized_resid_pre,\n",
-    "                \"n_heads d_model d_head, batch posn d_model -> batch posn n_heads d_head\",\n",
+    "                self.W_V,\n",
+    "                \"batch posn d_model, n_heads d_model d_head -> batch posn n_heads d_head\",\n",
     "            )\n",
-    "            + self.b_Q\n",
+    "            + self.b_V\n",
     "        )\n",
     "\n",
     "        attn_scores = einops.einsum(\n",
@@ -1362,23 +1372,15 @@
     "            K,\n",
     "            \"batch posn_Q n_heads d_head, batch posn_K n_heads d_head -> batch n_heads posn_Q posn_K\",\n",
     "        )\n",
-    "        attn_scores_scaled = attn_scores / math.sqrt(self.cfg.d_head)\n",
+    "        attn_scores_scaled = attn_scores / (self.cfg.d_head**0.5)\n",
     "        attn_scores_scaled_masked = self.apply_causal_mask(attn_scores_scaled)\n",
     "\n",
     "        attn_probs = attn_scores_scaled_masked.softmax(dim=-1)\n",
     "\n",
-    "        V = (\n",
-    "            einops.einsum(\n",
-    "                self.W_V,\n",
-    "                normalized_resid_pre,\n",
-    "                \"n_heads d_model d_head, batch posn d_model -> batch posn n_heads d_head\",\n",
-    "            )\n",
-    "            + self.b_V\n",
-    "        )\n",
     "        z = einops.einsum(\n",
-    "            attn_probs,\n",
     "            V,\n",
-    "            \"batch n_heads posn_Q posn_K, batch posn_K n_heads d_head -> batch posn_Q n_heads d_head\",\n",
+    "            attn_probs,\n",
+    "            \"batch posn_K n_heads d_head, batch n_heads posn_Q posn_K -> batch posn_Q n_heads d_head\",\n",
     "        )\n",
     "\n",
     "        return (\n",
@@ -1417,7 +1419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1489,7 +1491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1524,9 +1526,11 @@
     "        normalised_resid_pre = self.ln1(resid_pre)\n",
     "        attn_output = self.attn(normalised_resid_pre)\n",
     "        resid_mid = resid_pre + attn_output\n",
+    "\n",
     "        normalised_resid_mid = self.ln2(resid_mid)\n",
     "        mlp_output = self.mlp(normalised_resid_mid)\n",
     "        resid_post = resid_mid + mlp_output\n",
+    "\n",
     "        return resid_post\n",
     "\n",
     "\n",
@@ -1550,7 +1554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1604,7 +1608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1669,7 +1673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1714,7 +1718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1774,13 +1778,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3922765e12f446c5a5d906c9dd3d112c",
+       "model_id": "d86cca29d2374e38a29210746a4162d7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1802,7 +1806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
